JETcompiler/Tests/bad/bad023.myout
Cannot initiate field "x" of type "DoubleType" with incompatible type "IntegerType", line 4
